comfortclassParser.py
# Generated from comfortclass.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class comfortclassParser ( Parser ):

    grammarFileName = "comfortclass.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\\\"'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'!'", "'~'", 
                     "'*'", "'/'", "'%'", "'+'", "'-'", "'<'", "'>'", "'['", 
                     "']'", "','", "':'", "'.'", "'&'", "'|'", "'^'", "'='", 
                     "'\"'", "';'", "'{'", "'}'", "'func'", "'return'", 
                     "'event'", "'send'", "'if'", "'else'", "'while'", "'for'", 
                     "'in'", "'break'", "'continue'", "'try'", "'except'", 
                     "'switch'", "'case'", "'default'", "'import'", "'from'", 
                     "'extdef'", "'static'", "'const'", "'saved'", "'private'", 
                     "'protected'", "'public'", "'enum'", "'enump'", "'class'", 
                     "'object'", "'var'", "'null'", "'any'", "'true'", "'false'", 
                     "'as'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "JAVADOC", "COMMENTS", "MULTILINECOMMENT", 
                      "INT_MAGIC", "FLOAT_MAGIC", "L_PAREN", "R_PAREN", 
                      "EXCLAIMATION", "TILDE", "ASTERISK", "SLASH", "PERCENT", 
                      "PLUS", "MINUS", "LESS", "GREATER", "L_BRACKET", "R_BRACKET", 
                      "COMMA", "COLON", "DOT", "AND", "OR", "XOR", "EQUALS", 
                      "QUOTE", "SEMICOLON", "L_BRACE", "R_BRACE", "FUNC", 
                      "RETURN", "EVENT", "SEND", "IF", "ELSE", "WHILE", 
                      "FOR", "IN", "BREAK", "CONTINUE", "TRY", "EXCEPT", 
                      "SWITCH", "CASE", "DEFAULT", "IMPORT", "FROM", "EXTDEF", 
                      "STATIC", "CONST", "SAVED", "PRIVATE", "PROTECTED", 
                      "PUBLIC", "ENUM", "ENUMP", "CLASS", "OBJECT", "VAR", 
                      "NULL", "ANY", "TRUE", "FALSE", "AS", "WHITESPACE", 
                      "IDENTIFIER", "OTHER" ]

    RULE_identifier = 0
    RULE_imports = 1
    RULE_enumdef = 2
    RULE_param = 3
    RULE_paramlist = 4
    RULE_array = 5
    RULE_dict_ = 6
    RULE_magic = 7
    RULE_call = 8
    RULE_send = 9
    RULE_return_ = 10
    RULE_modifier = 11
    RULE_vardef = 12
    RULE_extvardef = 13
    RULE_funcdef = 14
    RULE_extfuncdef = 15
    RULE_eventdef = 16
    RULE_classdef = 17
    RULE_if_ = 18
    RULE_while_ = 19
    RULE_for_ = 20
    RULE_switch_ = 21
    RULE_expression = 22
    RULE_statement = 23
    RULE_codeblock = 24
    RULE_file_component = 25
    RULE_script = 26
    RULE_string = 27

    ruleNames =  [ "identifier", "imports", "enumdef", "param", "paramlist", 
                   "array", "dict_", "magic", "call", "send", "return_", 
                   "modifier", "vardef", "extvardef", "funcdef", "extfuncdef", 
                   "eventdef", "classdef", "if_", "while_", "for_", "switch_", 
                   "expression", "statement", "codeblock", "file_component", 
                   "script", "string" ]

    EOF = Token.EOF
    T__0=1
    JAVADOC=2
    COMMENTS=3
    MULTILINECOMMENT=4
    INT_MAGIC=5
    FLOAT_MAGIC=6
    L_PAREN=7
    R_PAREN=8
    EXCLAIMATION=9
    TILDE=10
    ASTERISK=11
    SLASH=12
    PERCENT=13
    PLUS=14
    MINUS=15
    LESS=16
    GREATER=17
    L_BRACKET=18
    R_BRACKET=19
    COMMA=20
    COLON=21
    DOT=22
    AND=23
    OR=24
    XOR=25
    EQUALS=26
    QUOTE=27
    SEMICOLON=28
    L_BRACE=29
    R_BRACE=30
    FUNC=31
    RETURN=32
    EVENT=33
    SEND=34
    IF=35
    ELSE=36
    WHILE=37
    FOR=38
    IN=39
    BREAK=40
    CONTINUE=41
    TRY=42
    EXCEPT=43
    SWITCH=44
    CASE=45
    DEFAULT=46
    IMPORT=47
    FROM=48
    EXTDEF=49
    STATIC=50
    CONST=51
    SAVED=52
    PRIVATE=53
    PROTECTED=54
    PUBLIC=55
    ENUM=56
    ENUMP=57
    CLASS=58
    OBJECT=59
    VAR=60
    NULL=61
    ANY=62
    TRUE=63
    FALSE=64
    AS=65
    WHITESPACE=66
    IDENTIFIER=67
    OTHER=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class IdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(comfortclassParser.IDENTIFIER)
            else:
                return self.getToken(comfortclassParser.IDENTIFIER, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(comfortclassParser.DOT)
            else:
                return self.getToken(comfortclassParser.DOT, i)

        def getRuleIndex(self):
            return comfortclassParser.RULE_identifier

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier" ):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):

        localctx = comfortclassParser.IdentifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_identifier)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(comfortclassParser.IDENTIFIER)
            self.state = 61
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 57
                    self.match(comfortclassParser.DOT)
                    self.state = 58
                    self.match(comfortclassParser.IDENTIFIER) 
                self.state = 63
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImportsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(comfortclassParser.IMPORT, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(comfortclassParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(comfortclassParser.IdentifierContext,i)


        def FROM(self):
            return self.getToken(comfortclassParser.FROM, 0)

        def AS(self, i:int=None):
            if i is None:
                return self.getTokens(comfortclassParser.AS)
            else:
                return self.getToken(comfortclassParser.AS, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(comfortclassParser.COMMA)
            else:
                return self.getToken(comfortclassParser.COMMA, i)

        def getRuleIndex(self):
            return comfortclassParser.RULE_imports

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImports" ):
                return visitor.visitImports(self)
            else:
                return visitor.visitChildren(self)




    def imports(self):

        localctx = comfortclassParser.ImportsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_imports)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==comfortclassParser.FROM:
                self.state = 64
                self.match(comfortclassParser.FROM)
                self.state = 65
                self.identifier()


            self.state = 68
            self.match(comfortclassParser.IMPORT)
            self.state = 69
            self.identifier()
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==comfortclassParser.AS:
                self.state = 70
                self.match(comfortclassParser.AS)
                self.state = 71
                self.identifier()


            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==comfortclassParser.COMMA:
                self.state = 74
                self.match(comfortclassParser.COMMA)
                self.state = 75
                self.identifier()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==comfortclassParser.AS:
                    self.state = 76
                    self.match(comfortclassParser.AS)
                    self.state = 77
                    self.identifier()


                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EnumdefContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(comfortclassParser.IDENTIFIER)
            else:
                return self.getToken(comfortclassParser.IDENTIFIER, i)

        def L_BRACE(self):
            return self.getToken(comfortclassParser.L_BRACE, 0)

        def R_BRACE(self):
            return self.getToken(comfortclassParser.R_BRACE, 0)

        def ENUM(self):
            return self.getToken(comfortclassParser.ENUM, 0)

        def ENUMP(self):
            return self.getToken(comfortclassParser.ENUMP, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(comfortclassParser.COMMA)
            else:
                return self.getToken(comfortclassParser.COMMA, i)

        def getRuleIndex(self):
            return comfortclassParser.RULE_enumdef

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumdef" ):
                return visitor.visitEnumdef(self)
            else:
                return visitor.visitChildren(self)




    def enumdef(self):

        localctx = comfortclassParser.EnumdefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_enumdef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            _la = self._input.LA(1)
            if not(_la==comfortclassParser.ENUM or _la==comfortclassParser.ENUMP):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 86
            self.match(comfortclassParser.IDENTIFIER)
            self.state = 87
            self.match(comfortclassParser.L_BRACE)
            self.state = 88
            self.match(comfortclassParser.IDENTIFIER)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==comfortclassParser.COMMA:
                self.state = 89
                self.match(comfortclassParser.COMMA)
                self.state = 90
                self.match(comfortclassParser.IDENTIFIER)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self.match(comfortclassParser.R_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(comfortclassParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(comfortclassParser.ExpressionContext,i)


        def COLON(self):
            return self.getToken(comfortclassParser.COLON, 0)

        def identifier(self):
            return self.getTypedRuleContext(comfortclassParser.IdentifierContext,0)


        def EQUALS(self):
            return self.getToken(comfortclassParser.EQUALS, 0)

        def getRuleIndex(self):
            return comfortclassParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = comfortclassParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.expression(0)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==comfortclassParser.COLON:
                self.state = 99
                self.match(comfortclassParser.COLON)
                self.state = 100
                self.identifier()


            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==comfortclassParser.EQUALS:
                self.state = 103
                self.match(comfortclassParser.EQUALS)
                self.state = 104
                self.expression(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_PAREN(self):
            return self.getToken(comfortclassParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(comfortclassParser.R_PAREN, 0)

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(comfortclassParser.ParamContext)
            else:
                return self.getTypedRuleContext(comfortclassParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(comfortclassParser.COMMA)
            else:
                return self.getToken(comfortclassParser.COMMA, i)

        def getRuleIndex(self):
            return comfortclassParser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = comfortclassParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_paramlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(comfortclassParser.L_PAREN)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 5)) & ~0x3f) == 0 and ((1 << (_la - 5)) & ((1 << (comfortclassParser.INT_MAGIC - 5)) | (1 << (comfortclassParser.FLOAT_MAGIC - 5)) | (1 << (comfortclassParser.L_PAREN - 5)) | (1 << (comfortclassParser.EXCLAIMATION - 5)) | (1 << (comfortclassParser.TILDE - 5)) | (1 << (comfortclassParser.MINUS - 5)) | (1 << (comfortclassParser.L_BRACKET - 5)) | (1 << (comfortclassParser.QUOTE - 5)) | (1 << (comfortclassParser.L_BRACE - 5)) | (1 << (comfortclassParser.NULL - 5)) | (1 << (comfortclassParser.TRUE - 5)) | (1 << (comfortclassParser.FALSE - 5)) | (1 << (comfortclassParser.IDENTIFIER - 5)))) != 0):
                self.state = 108
                self.param()


            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==comfortclassParser.COMMA:
                self.state = 111
                self.match(comfortclassParser.COMMA)
                self.state = 112
                self.param()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self.match(comfortclassParser.R_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_BRACKET(self):
            return self.getToken(comfortclassParser.L_BRACKET, 0)

        def R_BRACKET(self):
            return self.getToken(comfortclassParser.R_BRACKET, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(comfortclassParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(comfortclassParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(comfortclassParser.COMMA)
            else:
                return self.getToken(comfortclassParser.COMMA, i)

        def getRuleIndex(self):
            return comfortclassParser.RULE_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = comfortclassParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(comfortclassParser.L_BRACKET)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 5)) & ~0x3f) == 0 and ((1 << (_la - 5)) & ((1 << (comfortclassParser.INT_MAGIC - 5)) | (1 << (comfortclassParser.FLOAT_MAGIC - 5)) | (1 << (comfortclassParser.L_PAREN - 5)) | (1 << (comfortclassParser.EXCLAIMATION - 5)) | (1 << (comfortclassParser.TILDE - 5)) | (1 << (comfortclassParser.MINUS - 5)) | (1 << (comfortclassParser.L_BRACKET - 5)) | (1 << (comfortclassParser.QUOTE - 5)) | (1 << (comfortclassParser.L_BRACE - 5)) | (1 << (comfortclassParser.NULL - 5)) | (1 << (comfortclassParser.TRUE - 5)) | (1 << (comfortclassParser.FALSE - 5)) | (1 << (comfortclassParser.IDENTIFIER - 5)))) != 0):
                self.state = 121
                self.expression(0)


            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==comfortclassParser.COMMA:
                self.state = 124
                self.match(comfortclassParser.COMMA)
                self.state = 125
                self.expression(0)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self.match(comfortclassParser.R_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Dict_Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def L_BRACE(self):
            return self.getToken(comfortclassParser.L_BRACE, 0)

        def R_BRACE(self):
            return self.getToken(comfortclassParser.R_BRACE, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(comfortclassParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(comfortclassParser.ExpressionContext,i)


        def EQUALS(self, i:int=None):
            if i is None:
                return self.getTokens(comfortclassParser.EQUALS)
            else:
                return self.getToken(comfortclassParser.EQUALS, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(comfortclassParser.COMMA)
            else:
                return self.getToken(comfortclassParser.COMMA, i)

        def getRuleIndex(self):
            return comfortclassParser.RULE_dict_

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDict_" ):
                return visitor.visitDict_(self)
            else:
                return visitor.visitChildren(self)




    def dict_(self):

        localctx = comfortclassParser.Dict_Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_dict_)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(comfortclassParser.L_BRACE)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 5)) & ~0x3f) == 0 and ((1 << (_la - 5)) & ((1 << (comfortclassParser.INT_MAGIC - 5)) | (1 << (comfortclassParser.FLOAT_MAGIC - 5)) | (1 << (comfortclassParser.L_PAREN - 5)) | (1 << (comfortclassParser.EXCLAIMATION - 5)) | (1 << (comfortclassParser.TILDE - 5)) | (1 << (comfortclassParser.MINUS - 5)) | (1 << (comfortclassParser.L_BRACKET - 5)) | (1 << (comfortclassParser.QUOTE - 5)) | (1 << (comfortclassParser.L_BRACE - 5)) | (1 << (comfortclassParser.NULL - 5)) | (1 << (comfortclassParser.TRUE - 5)) | (1 << (comfortclassParser.FALSE - 5)) | (1 << (comfortclassParser.IDENTIFIER - 5)))) != 0):
                self.state = 134
                self.expression(0)
                self.state = 135
                self.match(comfortclassParser.EQUALS)
                self.state = 136
                self.expression(0)


            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==comfortclassParser.COMMA:
                self.state = 140
                self.match(comfortclassParser.COMMA)
                self.state = 141
                self.expression(0)
                self.state = 142
                self.match(comfortclassParser.EQUALS)
                self.state = 143
                self.expression(0)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self.match(comfortclassParser.R_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MagicContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_MAGIC(self):
            return self.getToken(comfortclassParser.INT_MAGIC, 0)

        def FLOAT_MAGIC(self):
            return self.getToken(comfortclassParser.FLOAT_MAGIC, 0)

        def string(self):
            return self.getTypedRuleContext(comfortclassParser.StringContext,0)


        def TRUE(self):
            return self.getToken(comfortclassParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(comfortclassParser.FALSE, 0)

        def array(self):
            return self.getTypedRuleContext(comfortclassParser.ArrayContext,0)


        def dict_(self):
            return self.getTypedRuleContext(comfortclassParser.Dict_Context,0)


        def NULL(self):
            return self.getToken(comfortclassParser.NULL, 0)

        def getRuleIndex(self):
            return comfortclassParser.RULE_magic

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMagic" ):
                return visitor.visitMagic(self)
            else:
                return visitor.visitChildren(self)




    def magic(self):

        localctx = comfortclassParser.MagicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_magic)
        try:
            self.state = 160
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [comfortclassParser.INT_MAGIC]:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(comfortclassParser.INT_MAGIC)
                pass
            elif token in [comfortclassParser.FLOAT_MAGIC]:
                self.enterOuterAlt(localctx, 2)
                self.state = 153
                self.match(comfortclassParser.FLOAT_MAGIC)
                pass
            elif token in [comfortclassParser.QUOTE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 154
                self.string()
                pass
            elif token in [comfortclassParser.TRUE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 155
                self.match(comfortclassParser.TRUE)
                pass
            elif token in [comfortclassParser.FALSE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 156
                self.match(comfortclassParser.FALSE)
                pass
            elif token in [comfortclassParser.L_BRACKET]:
                self.enterOuterAlt(localctx, 6)
                self.state = 157
                self.array()
                pass
            elif token in [comfortclassParser.L_BRACE]:
                self.enterOuterAlt(localctx, 7)
                self.state = 158
                self.dict_()
                pass
            elif token in [comfortclassParser.NULL]:
                self.enterOuterAlt(localctx, 8)
                self.state = 159
                self.match(comfortclassParser.NULL)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(comfortclassParser.IdentifierContext,0)


        def L_PAREN(self):
            return self.getToken(comfortclassParser.L_PAREN, 0)

        def R_PAREN(self):
            return self.getToken(comfortclassParser.R_PAREN, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(comfortclassParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(comfortclassParser.ExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(comfortclassParser.COMMA)
            else:
                return self.getToken(comfortclassParser.COMMA, i)

        def EQUALS(self, i:int=None):
            if i is None:
                return self.getTokens(comfortclassParser.EQUALS)
            else:
                return self.getToken(comfortclassParser.EQUALS, i)

        def getRuleIndex(self):
            return comfortclassParser.RULE_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = comfortclassParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.identifier()
            self.state = 163
            self.match(comfortclassParser.L_PAREN)
            self.state = 165
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((((_la - 5)) & ~0x3f) == 0 and ((1 << (_la - 5)) & ((1 << (comfortclassParser.INT_MAGIC - 5)) | (1 << (comfortclassParser.FLOAT_MAGIC - 5)) | (1 << (comfortclassParser.L_PAREN - 5)) | (1 << (comfortclassParser.EXCLAIMATION - 5)) | (1 << (comfortclassParser.TILDE - 5)) | (1 << (comfortclassParser.MINUS - 5)) | (1 << (comfortclassParser.L_BRACKET - 5)) | (1 << (comfortclassParser.QUOTE - 5)) | (1 << (comfortclassParser.L_BRACE - 5)) | (1 << (comfortclassParser.NULL - 5)) | (1 << (comfortclassParser.TRUE - 5)) | (1 << (comfortclassParser.FALSE - 5)) | (1 << (comfortclassParser.IDENTIFIER - 5)))) != 0):
                self.state = 164
                self.expression(0)


            self.state = 175
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==comfortclassParser.COMMA:
                self.state = 167
                self.match(comfortclassParser.COMMA)
                self.state = 168
                self.expression(0)
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==comfortclassParser.EQUALS:
                    self.state = 169
                    self.match(comfortclassParser.EQUALS)
                    self.state = 170
                    self.expression(0)


                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)
